# urb-research

./: .env.example.dev  .env.example.prod  .gitignore  README.md  pyproject.toml  run.sh
AGENTS/: LOST-AND-FOUND.md  README.md  agent-docs-maintenance.md  agent-primary.md  agent-tasks-maintenance.md
AGENTS/docs/: INDEX.md
AGENTS/education/: INDEX.md  lazy-loading.md  session-auth-cookie.md  test-coverage.md
AGENTS/memory/: MEMORY.md  alembic_retire_module_branch.md  alembic_revision_id_len.md  archive.md  box_shadow_subpixel_offset.md  clickable_card_default.md  codes_bare_storage_prefix_boundary.md  coverage_greenlet_concurrency.md  cross_module_fk_conftest.md  dead_deps_pruned.md  dev_browser_login.md  dev_query_hits_postgres_not_sqlite.md  dto_datetime_sql_format.md  env_prefix_scheme.md  fastmcp_metadata_gotchas.md  feedback_blockquote_explanations.md  feedback_browser_isolation.md  feedback_commit_protocol.md  feedback_edge_cases_into_tests.md  feedback_filters_in_vcard.md  feedback_migration_verify.md  feedback_never_checkout_dirty_shared_files.md  feedback_no_backtick_wrapping.md  feedback_no_repeat_caveat.md  frontend_auth_bootstrap.md  frontend_keepalive_double_load.md  frontend_keepalive_orphaned_tooltip.md  frontend_pagelayout_meta_snapshot.md  frontend_route_skeleton_during_chunk.md  frontend_settings_store.md  layout_scss_page_layout.md  mcp_token_resolver_staticmethod.md  migrate_check_revision_state_only.md  (+18 more)
src/: app.py
tests/: README.md  conftest.py
web/: env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+668 files in other folders)
