[project]
name = "semaphore_core"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "croniter>=2.0",
    "python-ulid>=3.1.0",
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
    "mcp>=1.24",
    "fastmcp>=3.4,<4",
    "anthropic>=0.40",
    "openai>=1.50",
    "mistune>=3.0",
    "python-intercom>=4.0",
    "nh3>=0.3.5",
    "pwdlib[argon2]>=0.2.1",
    "watchfiles>=0.24",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "filetype>=1.2.0",
    "pillow>=11.0",
    "pikepdf>=9.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "lxml>=5.0",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-xdist>=3.0",
    "pytest-cov>=6,<7",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "pure: без БД и сети; гоняются по умолчанию",
    "db: требует БД (in-memory SQLite, схема из ОРМ-моделей); гоняется по умолчанию",
    "heavy: реальные Alembic-миграции — только Postgres (TEST_PG_DSN), иначе скип; ключ --heavy",
    "live: тесты с реальными внешними запросами (требуют токен/сеть); отдельным ключом --live",
]
addopts = "-m 'not heavy and not live'"
